--- a/code/chap01ex.ipynb
+++ b/code/chap01ex.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[5 rows x 244 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,25 +261,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index([         u'caseid',        u'pregordr',       u'howpreg_n',\n",
-       "             u'howpreg_p',        u'moscurrp',        u'nowprgdk',\n",
-       "              u'pregend1',        u'pregend2',        u'nbrnaliv',\n",
-       "              u'multbrth',\n",
+       "Index(['caseid', 'pregordr', 'howpreg_n', 'howpreg_p', 'moscurrp', 'nowprgdk',\n",
+       "       'pregend1', 'pregend2', 'nbrnaliv', 'multbrth',\n",
        "       ...\n",
-       "            u'laborfor_i',      u'religion_i',         u'metro_i',\n",
-       "               u'basewgt', u'adj_mod_basewgt',        u'finalwgt',\n",
-       "                u'secu_p',            u'sest',         u'cmintvw',\n",
-       "           u'totalwgt_lb'],\n",
+       "       'laborfor_i', 'religion_i', 'metro_i', 'basewgt', 'adj_mod_basewgt',\n",
+       "       'finalwgt', 'secu_p', 'sest', 'cmintvw', 'totalwgt_lb'],\n",
        "      dtype='object', length=244)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,13 +794,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.29566744879946"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Look at line 68 in nsfg2.py"
+    "# Look at line 68 in nsfg2.py\n",
+    "preg['totalwgt_kg'] = preg.totalwgt_lb / 2.2046\n",
+    "preg.totalwgt_kg.mean()"
    ]
   },
   {
@@ -816,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -834,13 +841,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -1026,7 +1046,7 @@
        "[5 rows x 3087 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,13 +1064,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15    217\n",
+       "16    223\n",
+       "17    234\n",
+       "18    235\n",
+       "19    241\n",
+       "20    258\n",
+       "21    267\n",
+       "22    287\n",
+       "23    282\n",
+       "24    269\n",
+       "25    267\n",
+       "26    260\n",
+       "27    255\n",
+       "28    252\n",
+       "29    262\n",
+       "30    292\n",
+       "31    278\n",
+       "32    273\n",
+       "33    257\n",
+       "34    255\n",
+       "35    262\n",
+       "36    266\n",
+       "37    271\n",
+       "38    256\n",
+       "39    215\n",
+       "40    256\n",
+       "41    250\n",
+       "42    215\n",
+       "43    253\n",
+       "44    235\n",
+       "Name: age_r, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "resp.age_r.value_counts().sort_index()"
    ]
   },
   {
@@ -1342,13 +1401,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1069    44\n",
+       "Name: age_r, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "resp[resp.caseid==1].age_r"
    ]
   },
   {
@@ -1360,13 +1429,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['cmfstprg', 'cmlstprg', 'cmprgbeg', 'cmprgend', 'learnprg', 'learnprg_i', 'nowprgdk', 'prglngth', 'prglngth_i', 'prgoutcome', 'whyprg1', 'whyprg2']\n",
+      "cmfstprg\n",
+      "cmlstprg\n",
+      "cmprgbeg\n",
+      "cmprgend\n",
+      "learnprg\n",
+      "learnprg_i\n",
+      "nowprgdk\n",
+      "prglngth\n",
+      "prglngth_i\n",
+      "prgoutcome\n",
+      "whyprg1\n",
+      "whyprg2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2610    40\n",
+       "2611    36\n",
+       "2612    30\n",
+       "2613    40\n",
+       "Name: prglngth, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "# A lot of work looking for the column name\n",
+    "# First solution from: \n",
+    "#     https://stackoverflow.com/questions/21285380/pandas-find-column-whose-name-contains-a-specific-string/21285575\n",
+    "print([col for col in preg.columns.sort_values() if 'prg' in col])\n",
+    "for col in preg.columns.sort_values():\n",
+    "    if 'prg' in col:\n",
+    "        print(col)\n",
+    "\n",
+    "# Solution\n",
+    "preg[preg.caseid == 2298].prglngth"
    ]
   },
   {
@@ -1378,13 +1488,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5515    6.0\n",
+       "Name: totalwgt_lb, dtype: float64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "# Find actual column name\n",
+    "# print([col for col in preg.columns.sort_values() if 'wgt' in col])\n",
+    "\n",
+    "# Solution goes here\n",
+    "preg[preg.caseid == 5012].totalwgt_lb"
    ]
   },
   {
